chore: 서비스 준비도와 GitHub 관리 기반 정리